# NeoCandle

./: .gitmodules  README.md  cpelight.ino  original_firmware.uf2
Jack_Coroutines/: README.md  jack_coroutines.S  jack_coroutines.h  library.properties
arduino_nano/: README.md  arduino_nano.ino  arduino_nano.ino.eightanaloginputs.hex  cpelight_nano.ino
attiny85/: README.md  attiny85.ino  attiny85.ino.tiny8.hex
circuit_playground_express/: README.md  circuit_playground_express.ino  firmware.uf2
cpelight_nano/: cpelight_nano.ino
cpelight_rpi/: build.sh  cpelight.c  cpelight.h  program.c
cpelight_rpi/boot/: kernel.img
raspberry_pi_1/: README.md  cpelight.c  program.c
raspberry_pi_1/boot/: cmdline.txt  program.elf
raspberry_pi_pico/: CMakeLists.txt  README.md  build.sh
raspberry_pi_pico/fw/: CMakeLists.txt  main.c  test.py
